@@ -1,3 +1,7 @@
+2014-06-24  Vanessa Gil <vanessa.gil@artica.es>
+
+	* util/recon_scripts/snmpdevices.pl: Deleted file.
+
 2014-06-17  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Removed an unused module.
